Fix/workflow docs only prs (#24)
* docs: Add path traversal protection documentation for PR1 & PR2

Document security enhancements from PR1 and PR2:

- Add comprehensive path traversal protection section to SECURITY.md
  * Secret path protection details
  * SSH key path protection details
  * Security event logging examples

- Document secret name validation in credentials.yml.md
  * Allowed characters (alphanumeric, dash, underscore)
  * Path resolution security measures
  * Examples of valid/invalid secret names

- Add key path validation section to credentials.yml.md
  * Relative and absolute path validation rules
  * Traversal pattern detection
  * Examples of valid/invalid key paths

- Update Configuration.md with path traversal protection overview
  * Secret path security
  * SSH key path security
  * Security event logging

This documentation accompanies the security fixes in PR1 and PR2.

* fix: Allow lint and build workflows to run on documentation-only PRs

Previously, lint.yml and build.yml workflows used paths filters that
prevented them from running on documentation-only PRs. Since these
workflows are marked as Required in branch protection, they would show
as 'Expected - Waiting for status to be reported' and block merges.

Solution:
- Remove paths filter from pull_request trigger (keeps paths for push)
- Add check-changes job using dorny/paths-filter to detect code changes
- Make all lint/build/test jobs conditional - skip when only docs change
- Add skip-docs-only job that always succeeds when no code changes

This ensures:
- Workflows always run (satisfies required checks)
- Jobs skip gracefully when only documentation changed
- Code changes still trigger full lint/build/test pipeline

Fixes issue with PR #23 where workflows didn't run.

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -94,6 +94,35 @@ Secrets are resolved in this order:
 2. **Docker secret file**: `/app/secrets/<name>`
 3. **Empty string**: If not found
 
+### Path Traversal Protection
+
+**Security Feature:** Secret resolution includes path traversal protection to prevent unauthorized file access.
+
+#### Secret Name Validation
+
+- **Allowed characters**: Alphanumeric (a-z, A-Z, 0-9), dash (-), underscore (_)
+- **Rejected**: Special characters, path separators, traversal patterns
+- **Examples**:
+  ```yaml
+  # ✅ Valid
+  password_secret: "prod_password"
+  password_secret: "key-passphrase"
+  
+  # ❌ Invalid (rejected)
+  password_secret: "../etc/passwd"    # Path traversal
+  password_secret: "/absolute/path"   # Absolute path
+  password_secret: "secret.name"      # Special characters
+  ```
+
+#### Path Resolution Security
+
+1. **Relative paths only**: Secrets must use relative paths (no absolute paths)
+2. **Directory confinement**: All resolved paths must stay within `/app/secrets`
+3. **Normalization**: Paths are normalized to handle encoded traversal attempts
+4. **Security logging**: Path traversal attempts are logged as security events
+
+**Effect**: Prevents accessing files outside the secrets directory via path traversal attacks.
+
 ### Environment Variables
 
 **Setting secrets via environment:**
@@ -343,6 +372,31 @@ entries:
     key_passphrase_secret: "monitoring_service_passphrase"
     password_secret: ""
 ```
+
+## Path Traversal Protection for Keys
+
+**Security Feature:** SSH key path resolution includes path traversal protection.
+
+### Key Path Validation
+
+- **Relative paths**: Resolved relative to `keys_dir`, validated to stay within directory
+- **Absolute paths**: Must be within `keys_dir` (rejected if outside)
+- **Traversal patterns**: Paths containing `..` or `..\\` are rejected
+- **Security logging**: Path traversal attempts are logged
+
+**Examples**:
+```yaml
+# ✅ Valid key paths
+key_path: "id_ed25519"                    # Relative, within keys_dir
+key_path: "/app/keys/id_ed25519"         # Absolute, within keys_dir
+
+# ❌ Invalid (rejected)
+key_path: "../outside_key"                # Path traversal
+key_path: "/etc/passwd"                  # Outside keys_dir
+key_path: "../../root/.ssh/id_rsa"       # Traversal attempt
+```
+
+**Effect**: Prevents accessing SSH keys from unauthorized locations.
 
 ## Security Best Practices
 
