Security/pr3 file validation (#27)
* docs: Add path traversal protection documentation for PR1 & PR2

Document security enhancements from PR1 and PR2:

- Add comprehensive path traversal protection section to SECURITY.md
  * Secret path protection details
  * SSH key path protection details
  * Security event logging examples

- Document secret name validation in credentials.yml.md
  * Allowed characters (alphanumeric, dash, underscore)
  * Path resolution security measures
  * Examples of valid/invalid secret names

- Add key path validation section to credentials.yml.md
  * Relative and absolute path validation rules
  * Traversal pattern detection
  * Examples of valid/invalid key paths

- Update Configuration.md with path traversal protection overview
  * Secret path security
  * SSH key path security
  * Security event logging

This documentation accompanies the security fixes in PR1 and PR2.

* docs: Update CHANGELOG.md for path traversal documentation

Add entry for documentation updates (PR #23)

* feat: Add file path validation (PR3) - Validate paths are regular files

Add comprehensive file type validation to prevent security vulnerabilities:

**Security Enhancement:**
- Added _validate_file_path() helper function
- Rejects directories (must be files, not directories)
- Rejects symbolic links (symlinks can be security risks)
- Validates paths stay within allowed directories
- Only regular files are accepted

**Implementation:**
- Integrated validation into _resolve_secret() (requires file existence)
- Integrated validation into _resolve_key_path() (allows non-existent for later validation)
- Added require_exists parameter to handle different use cases

**Tests Added:**
- test_validate_file_path_directory_rejection
- test_validate_file_path_symlink_rejection
- test_validate_file_path_non_existent
- test_validate_file_path_outside_directory
- test_validate_file_path_regular_file_allowed
- test_resolve_secret_directory_rejection
- test_resolve_secret_symlink_

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -119,9 +119,15 @@ Secrets are resolved in this order:
 1. **Relative paths only**: Secrets must use relative paths (no absolute paths)
 2. **Directory confinement**: All resolved paths must stay within `/app/secrets`
 3. **Normalization**: Paths are normalized to handle encoded traversal attempts
-4. **Security logging**: Path traversal attempts are logged as security events
+4. **File type validation**: Only regular files are accepted (directories and symlinks rejected)
+5. **Security logging**: Path traversal and file validation failures are logged as security events
 
-**Effect**: Prevents accessing files outside the secrets directory via path traversal attacks.
+**File Type Requirements:**
+- ✅ Regular files within secrets directory
+- ❌ Directories (must be files, not directories)
+- ❌ Symbolic links (rejected for security)
+
+**Effect**: Prevents accessing files outside the secrets directory via path traversal attacks and blocks access to directories or symlinks that could pose security risks.
 
 ### Environment Variables
 
@@ -382,7 +388,8 @@ entries:
 - **Relative paths**: Resolved relative to `keys_dir`, validated to stay within directory
 - **Absolute paths**: Must be within `keys_dir` (rejected if outside)
 - **Traversal patterns**: Paths containing `..` or `..\\` are rejected
-- **Security logging**: Path traversal attempts are logged
+- **File type validation**: Only regular files accepted (directories and symlinks rejected)
+- **Security logging**: Path traversal and file validation failures are logged
 
 **Examples**:
 ```yaml
@@ -394,9 +401,16 @@ key_path: "/app/keys/id_ed25519"         # Absolute, within keys_dir
 key_path: "../outside_key"                # Path traversal
 key_path: "/etc/passwd"                  # Outside keys_dir
 key_path: "../../root/.ssh/id_rsa"       # Traversal attempt
+key_path: "subdirectory"                 # Points to directory, not file
+key_path: "symlink_key"                  # Points to symlink, not regular file
 ```
 
-**Effect**: Prevents accessing SSH keys from unauthorized locations.
+**File Type Requirements:**
+- ✅ Regular files within keys_dir (or non-existent files - validated when used)
+- ❌ Directories
+- ❌ Symbolic links (rejected for security)
+
+**Effect**: Prevents accessing SSH keys from unauthorized locations and blocks access to directories or symlinks that could pose security risks.
 
 ## Security Best Practices
 
