feat: Improve command denial logic to prevent bypasses (PR7) (#31)
* feat: Improve command denial logic to prevent bypasses (PR7)

**Security Enhancement:** Prevent command denial bypasses via obfuscation.

**Implementation:**
- Added _normalize_command() function for bypass detection
- Removes quotes (single and double) from commands
- Handles escaped characters (normalizes \ to space)
- Normalizes whitespace (collapses multiple spaces/tabs)
- Enhanced is_allowed() with dual checking (original + normalized)
- Added token-based matching for exact pattern matches
- Added _log_bypass_attempt() for security event logging

**Bypass Techniques Prevented:**
- Quote obfuscation: 'rm -rf /', "rm -rf /"
- Escaped characters: rm\ -rf\ /
- Whitespace variations: rm    -rf    /, rm\t-rf\t/
- Mixed techniques: echo "rm\\ -rf\\ /"

**Tests Added:**
- 12 comprehensive tests for bypass prevention
- Tests for quotes, escaping, whitespace variations
- Tests for command normalization function
- Tests that legitimate commands still work

**Documentation:**
- Updated SECURITY.md with bypass prevention section
- Updated policy.yml.md with bypass prevention details
- Documented limitations (complex obfuscation may still bypass)

**Security Impact:** Significantly reduces risk of command denial
bypasses through common obfuscation techniques. Perfect prevention
would require full command parsing.

Fixes security vulnerability from CodeQL analysis.

* fix: Format _log_bypass_attempt method signature to pass Black linting

- Split method parameters across multiple lines to comply with Black formatting
- Fixes linting failure in PR #31 for 'Improve command denial logic to prevent bypasses (PR7)'

--- a/docs/wiki/06.3-policy.yml.md
+++ b/docs/wiki/06.3-policy.yml.md
@@ -85,6 +85,19 @@ The `limits` section defines global execution limits and security settings that 
 | `require_known_host` | boolean | No | true | Require host to exist in known_hosts before connection | `false` |
 | `deny_substrings` | array | No | See below | List of substrings that will block any command containing them | `["rm -rf", "shutdown"]` |
 
+### Command Denial Bypass Prevention
+
+Commands are normalized before checking against `deny_substrings` to prevent bypass attempts:
+
+- **Quote Removal**: Single and double quotes are stripped (e.g., `'rm -rf /'` → `rm -rf /`)
+- **Escape Handling**: Escaped characters are normalized (e.g., `rm\ -rf\ /` → `rm -rf /`)
+- **Whitespace Normalization**: Multiple spaces/tabs are collapsed (e.g., `rm    -rf    /` → `rm -rf /`)
+- **Dual Checking**: Both original and normalized commands are checked
+
+**Security**: Bypass attempts detected via normalization are logged as security events.
+
+**Note**: Complex obfuscation (encoding, variable substitution) may still bypass. Focus is on common techniques.
+
 ### Default deny_substrings
 
 The following dangerous command substrings are blocked by default:
