feat: Add input length limits for configuration parameters (PR9) (#33)
**Security Enhancement:** Prevent resource exhaustion via oversized string inputs.

**Implementation:**
- Added MAX_SECRET_NAME_LENGTH (100 chars) and MAX_KEY_PATH_LENGTH (500 chars) constants
- Added length validation in _resolve_secret() for secret names
- Added length validation in _resolve_key_path() for SSH key paths
- Length validation occurs before other validations (character checks, path traversal)
- Security event logging for length limit violations

**Length Limits:**
- Secret names: 100 characters max
- SSH key paths: 500 characters max
- MCP tool parameters (from PR6):
  - Alias: 100 characters
  - Command: 10,000 characters
  - Tag: 50 characters
  - Task ID: 200 characters

**Tests Added:**
- 8 comprehensive tests for length limit validation
- Tests for secret names: at limit, exceeds limit, under limit
- Tests for key paths: at limit, exceeds limit, under limit
- Tests for validation order (length before character/traversal checks)

**Documentation:**
- Updated SECURITY.md with input length limits section
- Updated credentials.yml.md with length limit details
- Updated CHANGELOG.md with PR9 entry

**Security Impact:** Prevents resource exhaustion attacks via oversized
string inputs in configuration files and user-controlled parameters.
Complements PR6 input validation for MCP tool parameters.

Fixes security vulnerability from CodeQL analysis.

--- a/docs/wiki/06.2-credentials.yml.md
+++ b/docs/wiki/06.2-credentials.yml.md
@@ -98,6 +98,19 @@ Secrets are resolved in this order:
 
 **Security Feature:** Secret resolution includes path traversal protection to prevent unauthorized file access.
 
+### Input Length Limits
+
+All string parameters in credentials configuration have length limits:
+
+- **Secret Names**: Maximum 100 characters
+  - Validated when resolving secrets via `password_secret`, `key_passphrase_secret`
+  - Names exceeding limit are rejected with security event logging
+- **SSH Key Paths**: Maximum 500 characters
+  - Validated when resolving key paths
+  - Paths exceeding limit are rejected with security event logging
+
+**Security**: Length limits prevent resource exhaustion attacks via oversized inputs.
+
 #### Secret Name Validation
 
 - **Allowed characters**: Alphanumeric (a-z, A-Z, 0-9), dash (-), underscore (_)
